--- a/new.html
+++ b/new.html
@@ -87,14 +87,78 @@
         Пожалуйста, забудьте про забор из профлиста!
       </p>
       <div class="info-pictures__img1">
-        <img src="img/new/10.png" alt="">
+        <img src="img/new/10.png" alt="" />
       </div>
       <div class="info-pictures__img2">
-        <img src="img/new/9.png" alt="">
+        <img src="img/new/9.png" alt="" />
       </div>
       <div class="info-pictures__img3">
-        <img src="img/new/11.png" alt="">
+        <img src="img/new/11.png" alt="" />
       </div>
+    </div>
+
+    <div class="advantages container">
+      <h2 class="advantages__title">Почему наши заборы лучше?</h2>
+      <div class="advantages__like">
+        <div class="advantages__like-text">
+          <p>👍 В 3 раза дешевле, чем заборы из профлиста</p>
+          <p>👍 Трудозатраты на установку меньше на 60%, чем любые другие</p>
+          <p>👍 При поломке ремонт дешевле и быстрее минимум в 4 раза</p>
+          <p>
+            👍 Возможность использовать и по внешней границе участка, и внутри
+            участка
+          </p>
+          <p>👍 Гораздо красивее, чем заборы из профлиста</p>
+        </div>
+        <div class="advantages__like-pic advantages__like-pic1">
+          <img src="./img/new/12.png" />
+        </div>
+        <div class="advantages__like-pic advantages__like-pic2">
+          <img src="./img/new/13.png" />
+        </div>
+      </div>
+      <h2 class="advantages__title">Для чего нужны заборные секции?</h2>
+      <p class="adventages__text">
+        Купите уже собранные и окрашенные заборные секции из деревянного штакетника, которые вы легко установите самостоятельно                         
+      </p>
+      <p class="advantages__text">
+        Загородите и оградите себя от:
+      </p>
+      <div class="advantages__cards">
+        <div class="advantages__card">
+          <div class="adavantages__img">
+            <img src="./img/new/14.png" />
+          </div>
+          <div class="advantages__description>
+            <p>
+              ✅ Огородить участок от посторонних людей
+            </p>
+            <p>
+              ✅ Зонировать пространство на участке
+            </p>
+            <p>
+              ✅ Подчеркнуть дорожки и тропинки
+            </p>
+          </div>
+        </div>
+        <div class="advantages__card">
+          <div class="adavantages__img">
+            <img src="./img/new/15.png" />
+          </div>
+          <div class="advantages__description>
+            <p>
+              ✅ Отделить грядки, цветники от домашних животных
+            </p>
+            <p>
+              ✅ Огородить детскую площадку
+            </p>
+            <p>
+              ✅ Огородить детскую площадку
+            </p>
+          </div>
+        </div>
+      </div>
+      
     </div>
   </body>
 </html>
