--- a/new.html
+++ b/new.html
@@ -1,164 +1,228 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="description"
-      content="Готовые заборные секции из деревянного штакетника"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <title>деревянныйзабор.рф</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
-    />
-    <link rel="icon" href="./img/favicon.png" />
-    <link rel="stylesheet" href="./style/reset.css" />
-    <link rel="stylesheet" href="./style/style.css" />
-  </head>
-  <body>
-    <div class="info-gallery container">
-      <div class="info_gallery__content">
-        <h2 class="info-gallery__title">
-          Забор из деревянного штакетника - это ...
-        </h2>
-        <ul>
-          <li>Наши традиции и культура</li>
-          <li>Открытость и дружба с соседями - добрососедство</li>
-          <li>Искусство жить в гармонии с миром</li>
-        </ul>
-      </div>
-      <div class="info-gallery__pic">
-        <img src="./img/new/1.png" />
-      </div>
-      <div class="info-gallery__pic">
-        <img src="./img/new/2.png" />
-      </div>
-      <div class="info-gallery__pic">
-        <img src="./img/new/3.png" />
-      </div>
-      <div class="info-gallery__pic">
-        <img src="./img/new/4.png" />
-      </div>
-      <div class="info-gallery__pic">
-        <img src="./img/new/5.png" />
-      </div>
-      <div class="info-gallery__pic">
-        <img src="./img/new/6.png" />
-      </div>
-      <div class="info-gallery__pic">
-        <img src="./img/new/7.png" />
-      </div>
-      <div class="info-gallery__pic info-gallery__img">
-        <img src="./img/new/8.png" />
-      </div>
-      <div class="info-gallery__text">
-        <p>
-          Забор из деревянного штакетника - это красота, вдохновляющая
-          поколения…
-        </p>
-        <p>
-          Пройдут десятелетии, а наш забор так и будет классикой «отцов и
-          детей».
-        </p>
-        <p class="info-gallery__text2">
-          Вы видели такие фото забора из профлиста? И через 50-100 лет не
-          увидите!
-        </p>
-      </div>
-    </div>
 
-    <div class="info-pictures container">
-      <p class="info-pictures__text">
-        Пожалуйста, забудьте про забор из профлиста!
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="description" content="Готовые заборные секции из деревянного штакетника" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>деревянныйзабор.рф</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+  <link rel="icon" href="./img/favicon.png" />
+  <link rel="stylesheet" href="./style/reset.css" />
+  <link rel="stylesheet" href="./style/style.css" />
+</head>
+
+<body>
+  <div class="info-gallery container">
+    <div class="info_gallery__content">
+      <h2 class="info-gallery__title">
+        Забор из деревянного штакетника - это ...
+      </h2>
+      <ul>
+        <li>Наши традиции и культура</li>
+        <li>Открытость и дружба с соседями - добрососедство</li>
+        <li>Искусство жить в гармонии с миром</li>
+      </ul>
+    </div>
+    <div class="info-gallery__pic">
+      <img src="./img/new/1.png" />
+    </div>
+    <div class="info-gallery__pic">
+      <img src="./img/new/2.png" />
+    </div>
+    <div class="info-gallery__pic">
+      <img src="./img/new/3.png" />
+    </div>
+    <div class="info-gallery__pic">
+      <img src="./img/new/4.png" />
+    </div>
+    <div class="info-gallery__pic">
+      <img src="./img/new/5.png" />
+    </div>
+    <div class="info-gallery__pic">
+      <img src="./img/new/6.png" />
+    </div>
+    <div class="info-gallery__pic">
+      <img src="./img/new/7.png" />
+    </div>
+    <div class="info-gallery__pic info-gallery__img">
+      <img src="./img/new/8.png" />
+    </div>
+    <div class="info-gallery__text">
+      <p>
+        Забор из деревянного штакетника - это красота, вдохновляющая
+        поколения…
       </p>
-      <div class="info-pictures__img1">
-        <img src="img/new/10.png" alt="" />
+      <p>
+        Пройдут десятелетии, а наш забор так и будет классикой «отцов и
+        детей».
+      </p>
+      <p class="info-gallery__text2">
+        Вы видели такие фото забора из профлиста? И через 50-100 лет не
+        увидите!
+      </p>
+    </div>
+  </div>
+
+  <div class="info-pictures container">
+    <p class="info-pictures__text">
+      Пожалуйста, забудьте про забор из профлиста!
+    </p>
+    <div class="info-pictures__img1">
+      <img src="img/new/10.png" alt="" />
+    </div>
+    <div class="info-pictures__img2">
+      <img src="img/new/9.png" alt="" />
+    </div>
+    <div class="info-pictures__img3">
+      <img src="img/new/11.png" alt="" />
+    </div>
+  </div>
+
+  <div class="advantages container">
+    <h2 class="advantages__title">Почему наши заборы лучше?</h2>
+    <div class="advantages__like">
+      <div class="advantages__like-text">
+        <p>👍 В 3 раза дешевле, чем заборы из профлиста</p>
+        <p>👍 Трудозатраты на установку меньше на 60%, чем любые другие</p>
+        <p>👍 При поломке ремонт дешевле и быстрее минимум в 4 раза</p>
+        <p>
+          👍 Возможность использовать и по внешней границе участка, и внутри
+          участка
+        </p>
+        <p>👍 Гораздо красивее, чем заборы из профлиста</p>
       </div>
-      <div class="info-pictures__img2">
-        <img src="img/new/9.png" alt="" />
+      <div class="advantages__like-pic advantages__like-pic1">
+        <img src="./img/new/12.png" />
       </div>
-      <div class="info-pictures__img3">
-        <img src="img/new/11.png" alt="" />
+      <div class="advantages__like-pic advantages__like-pic2">
+        <img src="./img/new/13.png" />
       </div>
     </div>
-
-    <div class="advantages container">
-      <h2 class="advantages__title">Почему наши заборы лучше?</h2>
-      <div class="advantages__like">
-        <div class="advantages__like-text">
-          <p>👍 В 3 раза дешевле, чем заборы из профлиста</p>
-          <p>👍 Трудозатраты на установку меньше на 60%, чем любые другие</p>
-          <p>👍 При поломке ремонт дешевле и быстрее минимум в 4 раза</p>
+    <h2 class="advantages__title advantages__title2">Для чего нужны заборные секции?</h2>
+    <p class="adventages__text">
+      Купите уже собранные и окрашенные заборные секции из деревянного штакетника, которые вы легко установите
+      самостоятельно
+    </p>
+    <p class="advantages__text">
+      Загородите и оградите себя от:
+    </p>
+    <div class="advantages__cards">
+      <div class="advantages__card">
+        <div class="advantages__img">
+          <img src="./img/new/14.png" />
+        </div>
+        <div class="advantages__description">
           <p>
-            👍 Возможность использовать и по внешней границе участка, и внутри
-            участка
+            ✅ Огородить участок от посторонних людей
           </p>
-          <p>👍 Гораздо красивее, чем заборы из профлиста</p>
-        </div>
-        <div class="advantages__like-pic advantages__like-pic1">
-          <img src="./img/new/12.png" />
-        </div>
-        <div class="advantages__like-pic advantages__like-pic2">
-          <img src="./img/new/13.png" />
-        </div>
-      </div>
-      <h2 class="advantages__title">Для чего нужны заборные секции?</h2>
-      <p class="adventages__text">
-        Купите уже собранные и окрашенные заборные секции из деревянного штакетника, которые вы легко установите самостоятельно                         
-      </p>
-      <p class="advantages__text">
-        Загородите и оградите себя от:
-      </p>
-      <div class="advantages__cards">
-        <div class="advantages__card">
-          <div class="adavantages__img">
-            <img src="./img/new/14.png" />
-          </div>
-          <div class="advantages__description>
-            <p>
-              ✅ Огородить участок от посторонних людей
-            </p>
-            <p>
-              ✅ Зонировать пространство на участке
-            </p>
-            <p>
-              ✅ Подчеркнуть дорожки и тропинки
-            </p>
-          </div>
-        </div>
-        <div class="advantages__card">
-          <div class="adavantages__img">
-            <img src="./img/new/15.png" />
-          </div>
-          <div class="advantages__description>
-            <p>
-              ✅ Отделить грядки, цветники от домашних животных
-            </p>
-            <p>
-              ✅ Огородить детскую площадку
-            </p>
-            <p>
-              ✅ Огородить детскую площадку
-            </p>
-          </div>
+          <p>
+            ✅ Зонировать пространство на участке
+          </p>
+          <p>
+            ✅ Подчеркнуть дорожки и тропинки
+          </p>
         </div>
       </div>
-      
+      <div class="advantages__card">
+        <div class="advantages__img">
+          <img src="./img/new/15.png" />
+        </div>
+        <div class="advantages__description">
+          <p>
+            ✅ Отделить грядки, цветники от домашних животных
+          </p>
+          <p>
+            ✅ Огородить детскую площадку
+          </p>
+          <p>
+            ✅ Огородить детскую площадку
+          </p>
+        </div>
+      </div>
     </div>
-  </body>
+
+  </div>
+
+  <div class="compare container">
+    <div class="compare__block">
+      <div class="compare__first">
+        Заборные секции - высота 2 метра, ширина 1,92 метра
+      </div>
+      <div class="compare__second">
+        К каждой заборной секции мы дарим штакетину, чтобы закрыть столбик
+      </div>
+      <div class="compare__img">
+        <img src="./img/new/16.png" alt="">
+      </div>
+    </div>
+
+    <div class="compare__block">
+      <div class="compare__first">
+        Заборные секции - высота 1,5 метра, ширина 1,92 метра
+      </div>
+      <div class="compare__second">
+        К каждой заборной секции мы дарим штакетину, чтобы закрыть столбик
+      </div>
+      <div class="compare__img">
+        <img src="./img/new/17.png" alt="">
+      </div>
+    </div>
+
+    <div class="compare__block">
+      <div class="compare__first">
+        Заборные секции - высота 1 метр, ширина 1,92 метра
+      </div>
+      <div class="compare__second">
+        К каждой заборной секции мы дарим штакетину, чтобы закрыть столбик
+      </div>
+      <div class="compare__img">
+        <img src="./img/new/18.png" alt="">
+      </div>
+    </div>
+
+    <div class="compare__block">
+      <div class="compare__first">
+        Заборные секции - высота 0,5 метра, ширина 1,92 метра
+      </div>
+      <div class="compare__second">
+        К каждой заборной секции мы дарим штакетину, чтобы закрыть столбик
+      </div>
+      <div class="compare__img">
+        <img src="./img/new/19.png" alt="">
+      </div>
+    </div>
+
+    <div class="compare__block2">
+      <div class="compare__img2">
+        <img src="./img/new/20.png" alt="">
+      </div>
+      <div class="compare__text">
+        <p>
+          Штакетник 80мм/20мм - сухой (влажность 12-16%), строганный, из хвойных пород, северный лес
+        </p>
+        <p>
+          Лага 80мм/20мм - сухой (влажность 12-16%), строганный, из хвойных пород, северный лес
+        </p>
+        <p>
+          Столб металлический (круглый, квадратный или прямоугольный) от 40мм, толщина стенок от 3х мм
+        </p>
+        <p>
+          Грунт, земля, глина, суглинок
+        </p>
+        <p>
+          Щебень, камни любой фракции
+        </p>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
