--- a/index.html
+++ b/index.html
@@ -121,6 +121,50 @@
                 установочный столбик!
             </p>
         </div>
+        <div class="advantages2">
+            <h2 class="advantages__title advantages__title2">Для чего нужны заборные секции?</h2>
+            <p class="adventages__text">
+              Купите уже собранные и окрашенные заборные секции из деревянного штакетника, которые вы легко установите
+              самостоятельно
+            </p>
+            <p class="advantages__text">
+              Загородите и оградите себя от:
+            </p>
+            <div class="advantages__cards">
+              <div class="advantages__card">
+                <div class="advantages__img">
+                  <img src="./img/new/14.png" />
+                </div>
+                <div class="advantages__description">
+                  <p>
+                    ✅ Огородить участок от посторонних людей
+                  </p>
+                  <p>
+                    ✅ Зонировать пространство на участке
+                  </p>
+                  <p>
+                    ✅ Подчеркнуть дорожки и тропинки
+                  </p>
+                </div>
+              </div>
+              <div class="advantages__card">
+                <div class="advantages__img">
+                  <img src="./img/new/15.png" />
+                </div>
+                <div class="advantages__description">
+                  <p>
+                    ✅ Отделить грядки, цветники от домашних животных
+                  </p>
+                  <p>
+                    ✅ Огородить детскую площадку
+                  </p>
+                  <p>
+                    ✅ Загородить зоны подворья 
+                  </p>
+                </div>
+              </div>
+            </div>
+        </div>
         <div class="benefits">
             <div class="benefits__wrapper">
                 <div class="benefits__item">
@@ -249,6 +293,58 @@
                 <span class="fw700">100% оплаты!</span>
             </p>
         </div>
+    </div>
+</section>
+<section class="advantages1">
+    <div class="container">
+      <h2 class="advantages__title">Почему наши заборы лучше?</h2>
+      <div class="advantages__like">
+        <div class="advantages__like-text">
+          <p>👍 В 3 раза дешевле, чем заборы из профлиста</p>
+          <p>👍 Трудозатраты на установку меньше на 60%, чем любые другие</p>
+          <p>👍 При поломке ремонт дешевле и быстрее минимум в 4 раза</p>
+          <p>
+            👍 Возможность использовать и по внешней границе участка, и внутри
+            участка
+          </p>
+          <p>👍 Гораздо красивее, чем заборы из профлиста</p>
+        </div>
+        <div class="advantages__like-pic advantages__like-pic1">
+          <img src="./img/new/12.jpg" />
+          <!-- <img src="./img/new/12.png" /> -->
+        </div>
+        <div class="advantages__like-pic advantages__like-pic2">
+          <!-- <img src="./img/new/13.png" /> -->
+          <img src="./img/new/13.jpg" />
+        </div>
+      </div>
+    </div>
+</section>
+<section class="compare__block22">
+    <div class="container">
+        <div class="compare__block2">
+            <div class="compare__img2">
+                <img src="./img/new/20.png" alt="">
+              </div>
+              <div class="compare__text">
+                <p>
+                  1. Штакетник 80мм/20мм - сухой (влажность 12-16%), строганный, из хвойных пород, северный лес
+                </p>
+                <p>
+                  2. Лага 80мм/20мм - сухой (влажность 12-16%), строганный, из хвойных пород, северный лес
+                </p>
+                <p>
+                  3. Столб металлический (круглый, квадратный или прямоугольный) от 40мм, толщина стенок от 3х мм
+                </p>
+                <p>
+                  4. Грунт, земля, глина, суглинок
+                </p>
+                <p>
+                  5. Щебень, камни любой фракции
+                </p>
+              </div>
+        </div>
+     
     </div>
 </section>
 <section class="take" id="take">
@@ -755,6 +851,46 @@
             <a href="https://t.me/derevozabor">наш Telegram канал</a>
         </p>
     </div>
+</section>
+<section class="compare">
+    <div class="container">
+      <div class="compare__block">
+        <div class="compare__first">
+          Заборные секции - высота 2 метра, ширина 1,92 метра
+        </div>
+        <div class="compare__img">
+          <img src="./img/new/16.png" alt="">
+        </div>
+      </div>
+  
+      <div class="compare__block">
+        <div class="compare__first">
+          Заборные секции - высота 1,5 метра, ширина 1,92 метра
+        </div>
+        <div class="compare__img">
+          <img src="./img/new/17.png" alt="">
+        </div>
+      </div>
+  
+      <div class="compare__block">
+        <div class="compare__first">
+          Заборные секции - высота 1 метр, ширина 1,92 метра
+        </div>
+        <div class="compare__img">
+          <img src="./img/new/18.png" alt="">
+        </div>
+      </div>
+  
+      <div class="compare__block">
+        <div class="compare__first">
+          Заборные секции - высота 0,5 метра, ширина 1,92 метра
+        </div>
+        <div class="compare__img">
+          <img src="./img/new/19.png" alt="">
+        </div>
+      </div>
+    </div>
+
 </section>
 <section class="form" id="form">
     <div class="container">
